# mlxtend

./: .appveyor.yml  .coverage  .coveragerc  .flake8  .gitignore  .landscape.yaml  .landscape.yml  .pep8speaks.yml  .pre-commit-config.yaml  .travis.yml  .travis_test.sh  404.html  CHANGELOG.txt  CONTRIBUTING.md  LICENSE  LICENSE-BSD3.txt  LICENSE-CC-BY.txt  MANIFEST  MANIFEST.in  Makefile  Makefile   README.md  Untitled0.ipynb  __init__.py  __todo__.txt  appveyor.yml  conda_requirements.txt  conftest.py  environment.yml  files.txt  index.html  mlxtend.html  new_feat_select.ipynb  paper.bib  paper.md  pyproject.toml  requirements-min.txt  requirements-test.txt  requirements.txt  sandbox-dont-push.ipynb  (+5 more)
.conda/: build.sh  meta.yaml
.github/: CONTRIBUTING.md  ISSUE_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: BUG_REPORT.md  DOCUMENTATION_IMPROVEMENT.md  FEATURE_REQUEST.md  OTHER.md  USAGE_QUESTION.md
.github/workflows/: black-and-isort.yml  black.yml  black_format.yml  flake8-check.yml  full-test.yml  isort.yml  linter.yml  min-test.yml  publish.yaml  python-package-conda.yml  (+1 more)
.ipynb_checkpoints/: Untitled0-checkpoint.ipynb
CHANGELOG/: index.html
CONTRIBUTING/: index.html
Code-of-Conduct/: index.html
USER-GUIDE-INDEX/: index.html
USER_GUIDE_INDEX/: index.html
bla/: Makefile  conf.py  index.rst  make.bat
changelog/: index.html
ci/: .travis_install.sh  .travis_test.sh
cite/: index.html
contributing/: index.html
contributors/: index.html
css/: base.css  cinder.css
discuss/: index.html
docs/: CHANGELOG.txt  README.html  Untitled.ipynb  execute_notebooks.py  gen_api.py  ipynb2markdown.py  make_api.py  make_apy.py  make_userguide.py  md2pdf.py  mdx_math.py  mdx_math_setup.py  mkdocs.yml  pdftemplate.tex  temp.md
installation/: index.html
license/: index.html
mkdocs/: search_index.json
mlxtend/: .travis_test.sh  __init__.py
search/: search_index.json
(+1810 files in other folders)
